--- a/infinite_scroll/infinite_scroll/pubspec.yaml
+++ b/infinite_scroll/infinite_scroll/pubspec.yaml
@@ -9,6 +9,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^1.1.0
+  cached_network_image: ^3.2.0
+  flutter_staggered_grid_view: ^0.6.1
+  provider: ^6.1.2
+  connectivity_plus: ^3.0.3
+  rxdart: ^0.27.0
 
 dev_dependencies:
   flutter_test:
