--- a/infinite_scroll/infinite_scroll/pubspec.yaml
+++ b/infinite_scroll/infinite_scroll/pubspec.yaml
@@ -10,11 +10,11 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.1.0
-  cached_network_image: ^3.2.0
   flutter_staggered_grid_view: ^0.6.1
   provider: ^6.1.2
   connectivity_plus: ^3.0.3
   rxdart: ^0.27.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
